created CRUD with rails, love it

--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -1,9 +1,9 @@
 <div class="container mt-5">
 
   <%= simple_form_for(task) do |f| %>
-    <%= f.input :name %>
-    <%= f.input :address %>
-    <%= f.input :rating %>
+    <%= f.input :title %>
+    <%= f.input :details %>
+    <%= f.input :completed %>
     <%= f.submit %>
   <% end %>
 </div>
